<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context="com.example.twisted_hangman.MainActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/singleplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:background="@drawable/rounded"
        android:text="@string/singleplayer"
        android:textColor="@color/white"
        android:radius="6dp"
        android:textSize="25sp" />
    
    <TextView
        android:id="@+id/twistedHangman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/singleplayer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:gravity="center"
        android:text="@string/twisted_hangman"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/beat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/twistedHangman"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="29dp"
        android:gravity="center"
        android:text="@string/beat"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/beat"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/hello"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/singleplayer"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:radius="6dp"
        android:text="@string/options"
        android:textColor="@color/white"
        android:textSize="25sp" />
     
     <Button
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/options"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:radius="6dp"
        android:text="@string/statistics"
        android:textColor="@color/white"
        android:textSize="25sp" />
     
     <Button
        android:id="@+id/changeUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/statistics"
        android:background="@drawable/rounded"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="10dp"
        android:radius="6dp"
        android:text="@string/change_user"
        android:textColor="@color/white"
        android:textSize="25sp" />
</RelativeLayout>