<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context="com.example.twisted_hangman.newuserActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/hangman_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/options"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue"
        android:textSize="30sp" />

   <LinearLayout
       android:id="@+id/difficulty_options"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@id/hangman_options"
       android:layout_marginTop="30dp" >

       <TextView
           android:id="@+id/TextView01_options"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="2"
           android:text="@string/difficulty"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:textColor="@color/grey" />
         
          <SeekBar
	        android:id="@+id/editDifficulty_options"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="4.56"
	        android:max="100" />

    </LinearLayout>

    <Button
        android:id="@+id/go_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="21dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="30sp" />

     <LinearLayout
        android:id="@+id/letter_amount_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulty_options"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true" >

        <TextView
            android:id="@+id/letter_amount_input_options"
            android:layout_width="92dp"
            android:layout_height="45dp"
            android:text="@string/letters"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />

        <SeekBar
            android:id="@+id/editLetterAmount_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="24" />

    </LinearLayout>
    
   <LinearLayout
       android:id="@+id/type_layout_options"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/letter_amount_options"
       android:layout_marginTop="15dp" >

       <TextView
           android:id="@+id/TextView02_options"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="0.19"
           android:text="@string/type"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:textColor="@color/grey" />

       <Switch
           android:id="@+id/type_options"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textOff="Normal"
           android:textOn="Evil" />
   </LinearLayout>

</RelativeLayout>
